[package]
name = "web_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1",features=["full"] }
clap = { version="4.2.4"}
hyper = {version="1.0.0-rc.3",features=["full"]}
bytes = "1"
http = "0.2"
http-body-util = "0.1.0-rc.2"
url = "2.3.1"